# photoscrub

./: .gitignore  Cargo.toml  README.md
src/: exif_utils.rs  image.rs  main.rs
