[package]
name = "photoscrub"
version = "0.1.0"
authors = ["abishekk92 <bhat.abishek@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fake = { version = "2.4", features=['chrono'] }
img-parts = "0.2.3"
kamadak-exif = "0.5.4"
rand = "0.8.4"
structopt = "0.3.21"
titlecase = "1.1.0"
